# drago-engine

./: .gitignore  BUILDING.md  CMakeLists.txt  Makefile  README.md  cmakeLaunch  code.lua  game_engine.slnx  game_engine.vcxproj  game_engine.vcxproj.filters  renderLogger3-5.txt
libraries/box2d/include/box2d/: b2_math.h
packaging/linux/: .itch.toml  README.md  launch.sh
packaging/windows/: .itch.toml  README.md  launch.bat
scripts/: package_linux_release.sh  package_windows_release.sh  run_engine.sh
src/: Actor.h  ActorID.cpp  ActorID.h  AudioDB.cpp  AudioDB.h  AudioHelper.h  DB.cpp  DB.h  Engine.cpp  Engine.h  EngineLuaHelper.h  EngineUtils.cpp  EngineUtils.h  GameEditor.cpp  GameEditor.h  Helper.h  ImGuiLayer.cpp  ImGuiLayer.h  ImageDB.cpp  ImageDB.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  ResourcePaths.cpp  ResourcePaths.h  SceneDB.cpp  SceneDB.h  TextDB.cpp  TextDB.h  main.cpp
